--- a/Julmar.Wpf.Helpers/test/TestMvvmApp/PropertyWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/TestMvvmApp/PropertyWindow.xaml
@@ -2,8 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:julmar="http://www.julmar.com/wpfhelpers"
-    xmlns:Interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-    MinWidth="300" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False"
+    xmlns:Interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:Core="clr-namespace:JulMar.Core;assembly=Julmar.Core" MinWidth="300" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False"
     ResizeMode="NoResize" Title="TestMvvm Properties" SizeToContent="WidthAndHeight"
     julmar:HelpProvider.Filename="Julmar.Wpf.Helpers.chm">
     
@@ -40,6 +39,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
         
@@ -69,9 +69,12 @@
         </TextBox>
 
         <Label Grid.Row="2" Content="Running on:" />
-        <Label Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Foreground="Black" Content="{x:Static julmar:SystemInfo.OperatingSystem}" />
+        <Label Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Foreground="Black" Content="{x:Static Core:SystemInfo.OperatingSystem}" />
 
-        <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <Label Grid.Row="3" Content="Cores:" />
+        <Label Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Foreground="Black" Content="{x:Static Core:SystemInfo.PhysicalCores}" />
+
+        <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="OK" IsDefault="True">
                 <Interactivity:Interaction.Behaviors>
                     <julmar:CloseDialogBehavior />
