--- a/Julmar.Wpf.Helpers/test/DragDropTest/App.xaml
+++ b/Julmar.Wpf.Helpers/test/DragDropTest/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="ItemsControlDragDropBehavior.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="MainWindow.xaml">
+    StartupUri="DataGridWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
