--- a/Julmar.Wpf.Helpers/test/ScrollTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/ScrollTest/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:diag="clr-namespace:System.Diagnostics;assembly=System"
         xmlns:int="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:julmar="http://www.julmar.com/wpfhelpers"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Synchronized Scroll Behavior Test" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -14,11 +14,7 @@
             <ObjectDataProvider x:Key="processList" ObjectType="{x:Type diag:Process}" MethodName="GetProcesses" />
             
             <DataTemplate x:Key="ScrollingTemplate">
-                <Border BorderBrush="Black" CornerRadius="10" 
-                        Background="#a0000000" BorderThickness="2">
-                    <Label Content="{Binding Value}" Foreground="White" 
-                           FontWeight="Bold" FontSize="16pt" />
-                </Border>
+                <Label Content="{Binding Value}" FontWeight="Bold" FontSize="16pt" />
             </DataTemplate>
            
         </Grid.Resources>
