--- a/Julmar.Wpf.Helpers/test/TestMvvmApp/PropertyWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/TestMvvmApp/PropertyWindow.xaml
@@ -63,10 +63,10 @@
         </TextBox>
 
         <Label Grid.Row="1" Content="# of Shapes:" />
-        <TextBox Grid.Row="1" Text="{Binding ShapeCount, UpdateSourceTrigger=PropertyChanged}" julmar:NumericTextBoxBehavior.IsEnabled="true">
-        	<!--<Interactivity:Interaction.Behaviors>
-        		<julmar:NumericTextBoxBehavior/>
-        	</Interactivity:Interaction.Behaviors>-->
+        <TextBox Grid.Row="1" Text="{Binding ShapeCount, UpdateSourceTrigger=PropertyChanged}">
+        	<Interactivity:Interaction.Behaviors>
+        		<julmar:NumericTextBoxBehavior AllowMouseDrag="True" Minimum="1" Maximum="500" />
+        	</Interactivity:Interaction.Behaviors>
         </TextBox>
 
         <Label Grid.Row="2" Content="Running on:" />
